Add slide on jQuery plugin site

--- a/2013/jquery-migrate/styles/impress-demo.css
+++ b/2013/jquery-migrate/styles/impress-demo.css
@@ -219,6 +219,12 @@ code.inline {
   display: block;
 }
 
+#jquery-plugins {
+  text-align: center;
+} #jquery-plugins h1 {
+  margin-bottom: 0.3em;
+}
+
 #grunt {
   text-align: center;
 } #grunt h1 {
